Update and rename config_sample.env to config.env

--- a/config.env
+++ b/config.env
@@ -1,32 +1,31 @@
-# Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
+
 
 # RECOMMNED SETUP 
 ## Setup only Required Config & DATABASE_URL
 ## Rest of variable can be setup using BOT by /bsetting command
 
 # REQUIRED CONFIG
-BOT_TOKEN = ""
-OWNER_ID = ""
-TELEGRAM_API = ""
-TELEGRAM_HASH = ""
+BOT_TOKEN = "5085575599:AAEjVyKk4PxndYDBCQ1RF29kezLa7Q9Bqms"
+OWNER_ID = "1487627714"
+TELEGRAM_API = "7664661"
+TELEGRAM_HASH = "9917a213ffbf087c7d98955bef592e75"
 
 # OPTIONAL CONFIG
-GDRIVE_ID = ""
+GDRIVE_ID = "1cWkJK9KS3Up0kwisIqoeNzb18ws0McW4"
 DOWNLOAD_DIR = "/usr/src/app/downloads"
-STATUS_UPDATE_INTERVAL = "20"                       
+STATUS_UPDATE_INTERVAL = "10"                       
 AUTO_DELETE_MESSAGE_DURATION = "60"       
 AUTO_DELETE_UPLOAD_MESSAGE_DURATION = "-1" 
-DATABASE_URL = ""
+DATABASE_URL = "postgres://gjynhtkt:4kGyr6fTE7VPNqDSteSEjwYjcTh3VXa8@mahmud.db.elephantsql.com/gjynhtkt"
 AUTHORIZED_CHATS = ""
-SUDO_USERS = ""
+SUDO_USERS = "1487627714"
 IGNORE_PENDING_REQUESTS = ""
-IS_TEAM_DRIVE = ""
-USE_SERVICE_ACCOUNTS = ""
+IS_TEAM_DRIVE = "True"
+USE_SERVICE_ACCOUNTS = "False"
 SA_MAIL = ""                                          # SA Email id To display in USER TD Section
-INDEX_URL = ""                                        # Not end with /
+INDEX_URL = "https://myindex.mahanbharat.workers.dev/1:/Bot"                                        # Not end with /
 STATUS_LIMIT = "2"                                    # Recommended Value : 2 (If Using PICS)
-STOP_DUPLICATE = ""
+STOP_DUPLICATE = "False"
 CMD_SUFFIX = ""
 UPTOBOX_TOKEN = ""
 TORRENT_TIMEOUT = ""
@@ -35,14 +34,14 @@ INCOMPLETE_TASK_NOTIFIER = ""
 TGH_THUMB = ""                                        # Give Telegraph URL(graph.org) for Logs/File Thumbnail
 
 # TURN ON/OFF FUCTIONS
-LEECH_ENABLED = ""                                    # Default is False (only use by owner/sudo) Make it True (for authorized chats)
-MIRROR_ENABLED = ""                                   # Default is False (only use by owner/sudo) Make it True (for authorized chats)
-QB_MIRROR_ENABLED = ""                                # Default is False (only use by owner/sudo) Make it True (for authorized chats)
-WATCH_ENABLED = ""                                    # Default is False (only use by owner/sudo) Make it True (for authorized chats)
-CLONE_ENABLED = ""                                    # Default is False (only use by owner/sudo) Make it True (for authorized chats)
-ANILIST_ENABLED = ""                                  # Default is False (only use by owner/sudo) Make it True (for authorized chats)
-WAYBACK_ENABLED = ""                                  # Default is False (only use by owner/sudo) Make it True (for authorized chats)
-MEDIAINFO_ENABLED = ""                                # Default is False (only use by owner/sudo) Make it True (for authorized chats)
+LEECH_ENABLED = "True"                                    # Default is False (only use by owner/sudo) Make it True (for authorized chats)
+MIRROR_ENABLED = "True"                                   # Default is False (only use by owner/sudo) Make it True (for authorized chats)
+QB_MIRROR_ENABLED = "True"                                # Default is False (only use by owner/sudo) Make it True (for authorized chats)
+WATCH_ENABLED = "True"                                    # Default is False (only use by owner/sudo) Make it True (for authorized chats)
+CLONE_ENABLED = "True"                                    # Default is False (only use by owner/sudo) Make it True (for authorized chats)
+ANILIST_ENABLED = "True"                                  # Default is False (only use by owner/sudo) Make it True (for authorized chats)
+WAYBACK_ENABLED = "True"                                  # Default is False (only use by owner/sudo) Make it True (for authorized chats)
+MEDIAINFO_ENABLED = "True"                                # Default is False (only use by owner/sudo) Make it True (for authorized chats)
 SET_BOT_COMMANDS = "" 
 
 # UPDATE
@@ -51,7 +50,7 @@ UPSTREAM_BRANCH = ""
 UPDATE_PACKAGES = "False"
 
 # PM SUPPORT
-BOT_PM = ""                                           # If this True/False any User can Enable/Disable BOT_PM by using Usetting
+BOT_PM = "True"                                           # If this True/False any User can Enable/Disable BOT_PM by using Usetting
 FORCE_BOT_PM = ""                                     # If this True then NO User can Enable/Disable BOT_PM by using Usetting 
 
 # LEECH
@@ -99,7 +98,7 @@ RSS_CHAT_ID = ""                                      # Chat ID (Started with -1
 USER_SESSION_STRING = ""                              # Use it for 4GB leeching
 
 # MEGA
-MEGA_API_KEY = ""
+MEGA_API_KEY = "C5Bw3JxS"
 MEGA_EMAIL_ID = ""
 MEGA_PASSWORD = ""
 
@@ -109,7 +108,7 @@ SHORTENER_API = ""                                    # Seperate multiple shortn
 
 # CRYPTS
 SAME_ACC_COOKIES = ""                                 # If using Different Account For Crypts set it to False (Deafult is True)
-GDTOT_CRYPT = ""                                      # Crypt for GDTOT
+GDTOT_CRYPT = "cnB0ZTNENXFjcEtRTFdpRjFvcjZxZFJEeWk1WkpiSVNJZ3lqM2d2ZjdXQT0%3D"                                      # Crypt for GDTOT
 HUBDRIVE_CRYPT = ""                                   # Crypt for HUBDRIVE
 KATDRIVE_CRYPT = ""                                   # Crypt for KATDRIVE
 KOLOP_CRYPT = ""                                      # Crypt for KOLOP + DRIVEHUB
@@ -169,8 +168,8 @@ IMDB_TEMPLATE = "<b>Title: </b> {title} [{year}]\n<b>Also Known As:</b> {aka}\n<
 # DIFFERENT BOT BUTTONS 
 SAVE_MSG = ""
 DISABLE_DRIVE_LINK = "" 
-VIEW_LINK = ""
-SOURCE_LINK = ""
+VIEW_LINK = "True"
+SOURCE_LINK = "True"
 START_BTN1_NAME = ""
 START_BTN1_URL = ""
 START_BTN2_NAME = ""
