--- a/config_sample.env
+++ b/config_sample.env
@@ -1,30 +1,28 @@
-# Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
 
 # RECOMMNED SETUP 
 ## Setup only Required Config & DATABASE_URL
 ## Rest of variable can be setup using BOT by /bsetting command
 
 # REQUIRED CONFIG
-BOT_TOKEN = ""
-OWNER_ID = ""
-TELEGRAM_API = ""
-TELEGRAM_HASH = ""
+BOT_TOKEN = "5085575599:AAEjVyKk4PxndYDBCQ1RF29kezLa7Q9Bqms"
+OWNER_ID = "1487627714"
+TELEGRAM_API = "7664661"
+TELEGRAM_HASH = "9917a213ffbf087c7d98955bef592e75"
 
 # OPTIONAL CONFIG
-GDRIVE_ID = ""
+GDRIVE_ID = "1cWkJK9KS3Up0kwisIqoeNzb18ws0McW4"
 DOWNLOAD_DIR = "/usr/src/app/downloads"
-STATUS_UPDATE_INTERVAL = "20"                       
+STATUS_UPDATE_INTERVAL = "10"                       
 AUTO_DELETE_MESSAGE_DURATION = "60"       
 AUTO_DELETE_UPLOAD_MESSAGE_DURATION = "-1" 
-DATABASE_URL = ""
+DATABASE_URL = "postgres://gjynhtkt:4kGyr6fTE7VPNqDSteSEjwYjcTh3VXa8@mahmud.db.elephantsql.com/gjynhtkt"
 AUTHORIZED_CHATS = ""
 SUDO_USERS = ""
 IGNORE_PENDING_REQUESTS = ""
-IS_TEAM_DRIVE = ""
+IS_TEAM_DRIVE = "True"
 USE_SERVICE_ACCOUNTS = ""
 SA_MAIL = ""                                          # SA Email id To display in USER TD Section
-INDEX_URL = ""                                        # Not end with /
+INDEX_URL = "https://myindex.mahanbharat.workers.dev/1:/Bot"                                        # Not end with /
 STATUS_LIMIT = "2"                                    # Recommended Value : 2 (If Using PICS)
 STOP_DUPLICATE = ""
 CMD_SUFFIX = ""
@@ -99,7 +97,7 @@ RSS_CHAT_ID = ""                                      # Chat ID (Started with -1
 USER_SESSION_STRING = ""                              # Use it for 4GB leeching
 
 # MEGA
-MEGA_API_KEY = ""
+MEGA_API_KEY = "C5Bw3JxS"
 MEGA_EMAIL_ID = ""
 MEGA_PASSWORD = ""
 
@@ -109,7 +107,7 @@ SHORTENER_API = ""                                    # Seperate multiple shortn
 
 # CRYPTS
 SAME_ACC_COOKIES = ""                                 # If using Different Account For Crypts set it to False (Deafult is True)
-GDTOT_CRYPT = ""                                      # Crypt for GDTOT
+GDTOT_CRYPT = "cnB0ZTNENXFjcEtRTFdpRjFvcjZxZFJEeWk1WkpiSVNJZ3lqM2d2ZjdXQT0%3D"                                      # Crypt for GDTOT
 HUBDRIVE_CRYPT = ""                                   # Crypt for HUBDRIVE
 KATDRIVE_CRYPT = ""                                   # Crypt for KATDRIVE
 KOLOP_CRYPT = ""                                      # Crypt for KOLOP + DRIVEHUB
