--- a/config.env
+++ b/config.env
@@ -15,7 +15,7 @@ DOWNLOAD_DIR = "/usr/src/app/downloads"
 STATUS_UPDATE_INTERVAL = "10"                       
 AUTO_DELETE_MESSAGE_DURATION = "60"       
 AUTO_DELETE_UPLOAD_MESSAGE_DURATION = "-1" 
-DATABASE_URL = "mongodb+srv://rajiv:rajiv@cluster0.hd0ugug.mongodb.net/?retryWrites=true&w=majority"
+DATABASE_URL = ""
 AUTHORIZED_CHATS = ""
 SUDO_USERS = ""
 IGNORE_PENDING_REQUESTS = ""
