--- a/config.env
+++ b/config.env
@@ -4,7 +4,7 @@
 ## Rest of variable can be setup using BOT by /bsetting command
 
 # REQUIRED CONFIG
-BOT_TOKEN = "5085575599:AAEjVyKk4PxndYDBCQ1RF29kezLa7Q9Bqms"
+BOT_TOKEN = "5649397875:AAF5Vzi6ikO8Di2CIESH_0RWtcSwGFG9OO4"
 OWNER_ID = "1487627714"
 TELEGRAM_API = "7664661"
 TELEGRAM_HASH = "9917a213ffbf087c7d98955bef592e75"
@@ -15,7 +15,7 @@ DOWNLOAD_DIR = "/usr/src/app/downloads"
 STATUS_UPDATE_INTERVAL = "10"                       
 AUTO_DELETE_MESSAGE_DURATION = "60"       
 AUTO_DELETE_UPLOAD_MESSAGE_DURATION = "-1" 
-DATABASE_URL = ""
+DATABASE_URL = "mongodb+srv://rajiv:rajiv@wzml.cro5gea.mongodb.net/?retryWrites=true&w=majority"
 AUTHORIZED_CHATS = ""
 SUDO_USERS = ""
 IGNORE_PENDING_REQUESTS = ""
